samples/_failures_safe/1761316421_ed3d86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_498602df.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_498602df.c:155:5: error: expected expression at end of input
  155 |     char c = input[*
      |     ^~~~
./samples/SAFE/__tmp_498602df.c:155:5: error: expected declaration or statement at end of input
